src/tests/snapshots/fern__tests__error__case_no_esac.snap
---
source: src/tests/error.rs
expression: err_fmt
---
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m] - [31m[1mParse Error[0m
[36m[1m  |[0m
[36m[1m1 |[0m case foo in foo) bar;; bar) foo;;
[36m[1m  |[0m
  [36m[1m-[0m Expected 'esac' after case block
