src/tests/snapshots/fern__tests__error__cmd_not_found.snap
---
source: src/tests/error.rs
expression: err_fmt
---
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m] - [31m[1mCommand not found: foo[0m
[36m[1m  |[0m
[36m[1m1 |[0m foo
[36m[1m  |[0m
  [36m[1m-[0m
