src/tests/snapshots/fern__tests__error__error_with_notes_and_sub_notes.snap
---
source: src/tests/error.rs
expression: err_fmt
---
Execution failed
[32mnote[0m: Execution failed for this reason

[32mnote[0m: Here is how to fix it:
    [36m[1m-[0m blah
    [36m[1m-[0m blah
    [36m[1m-[0m blah
