src/tests/snapshots/fern__tests__error__if_no_then.snap
---
source: src/tests/error.rs
expression: err_fmt
---
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m] - [31m[1mParse Error[0m
[36m[1m  |[0m
[36m[1m1 |[0m if foo; bar; fi
[36m[1m  |[0m
  [36m[1m-[0m Expected 'then' after 'if' condition
