src/tests/snapshots/fern__tests__error__loop_no_do.snap
---
source: src/tests/error.rs
expression: err_fmt
---
[31m[1mParse Error[0m - Expected 'do' after loop condition
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m]
[36m[1m  |[0m
[36m[1m1 |[0m while true; echo foo; done
[36m[1m  |[0m [31m[1m^^^^^^^^^^^^^^^^^^^^^[0m
[36m[1m  |[0m
