src/tests/snapshots/fern__tests__error__loop_no_done.snap
---
source: src/tests/error.rs
expression: err_fmt
---
[31m[1mParse Error[0m - Expected 'done' after loop body
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m]
[36m[1m  |[0m
[36m[1m1 |[0m while true; do echo foo;
[36m[1m  |[0m [31m[1m^^^^^^^^^^^^^^^^^^^^^^^^[0m
[36m[1m  |[0m
