src/tests/snapshots/fern__tests__error__unclosed_brc_grp.snap
---
source: src/tests/error.rs
expression: err_fmt
---
[31m[1mParse Error[0m - Expected a closing brace for this brace group
  [36m[1m->[0m [[36m[1m1[0m;[36m[1m1[0m]
[36m[1m  |[0m
[36m[1m1 |[0m { foo bar
[36m[1m  |[0m [31m[1m^^^^^^^^^[0m
[36m[1m  |[0m
